Imported https://htmlunit.svn.sourceforge.net/svnroot/htmlunit/tags/HtmlUnit-2.9/